hosts/macos/Sources/EivizMixer/eiviz_mixer.h

typedef struct EivizOverlayDesc {
    uint64_t source_id;
    EivizRect rect;
    EivizRect crop;
    float opacity;
    int32_t z;
    uint32_t audio_follow;
    uint32_t hidden;
    const char *label;
} EivizOverlayDesc;
typedef struct EivizVideoInfo {
    uint32_t playing;
    uint32_t is_file;
    int64_t position_hns;
    int64_t duration_hns;
} EivizVideoInfo;
typedef struct EivizVideoCaptureInfo {
    uint8_t id[512];
    uint8_t name[256];
} EivizVideoCaptureInfo;
typedef struct EivizVideoCaptureMode {
    uint32_t width;
    uint32_t height;
    uint32_t fps_num;
    uint32_t fps_den;
    uint32_t format;
} EivizVideoCaptureMode;
typedef struct EivizAudioPeak {
    uint64_t source_id;
    float left;
    float right;
} EivizAudioPeak;
typedef struct EivizMixerStats {
    float render_ms;
    float frame_budget_ms;
    uint64_t ram_bytes;
    uint64_t vram_bytes;
    uint64_t compose_vram_bytes;
    uint64_t delay_vram_bytes;
    uint64_t surface_lost;
} EivizMixerStats;
typedef struct EivizMixerRuntimeStats {
    uint64_t uptime_ms;
    uint64_t render_skipped;
    uint64_t input_queue_dropped;
    uint32_t output_omt;
    uint32_t output_ndi;
    uint32_t output_decklink;
    uint32_t output_omt_subscribed;
    uint32_t output_ndi_connections;
} EivizMixerRuntimeStats;
typedef struct EivizInputRuntimeStats {
    uint64_t source_id;
    uint64_t uptime_ms;
    uint64_t queue_dropped;
} EivizInputRuntimeStats;
typedef struct EivizOutputRuntimeStats {
    uint64_t output_id;
    uint32_t transport;
    uint64_t uptime_ms;
    uint32_t connections;
    uint32_t enabled;
} EivizOutputRuntimeStats;
typedef struct EivizMixerRebarInfo {
    uint32_t available;
    uint32_t active;
    uint32_t uma;
    uint32_t gpu_upload_heaps;
    uint64_t bar_bytes;
    uint64_t vram_bytes;
    uint8_t adapter[128];
} EivizMixerRebarInfo;
typedef struct EivizSourceUsage {
    uint64_t source_id;
    uint32_t width;
    uint32_t height;
    uint64_t ram_bytes;
    uint64_t vram_bytes;
    float gpu_pct;
} EivizSourceUsage;
int32_t mixer_define_scene(uint64_t scene_id, uint32_t width, uint32_t height, uint32_t count, const EivizOverlayDesc *layers);
int32_t mixer_destroy_scene(uint64_t scene_id);
int32_t mixer_define_generator(uint64_t id, uint32_t kind, float r, float g, float b, float a, uint32_t scroll);
int32_t mixer_define_mix_input(uint64_t id, uint64_t target_id, uint32_t source_kind, uint32_t delay, uint64_t audio_bus_id);
int32_t mixer_generator_set_tone(uint64_t id, float hz, float level_dbfs);
int32_t mixer_push_frame(uint64_t id, const uint8_t *ptr, uint32_t stride, uint32_t height, int64_t pts);
int32_t mixer_push_audio(uint64_t id, int32_t sample_rate, int32_t channels, uint32_t frames, int64_t pts, const float *planar);
int32_t mixer_load_still(uint64_t id, const char *path);
int32_t mixer_video_start(uint64_t id, const char *path, uint32_t capture, uint32_t format, uint32_t width, uint32_t height, uint32_t fps_num, uint32_t fps_den, uint32_t frame_buffer_frames);
int32_t mixer_video_enum_captures(EivizVideoCaptureInfo *out, uint32_t cap);
int32_t mixer_video_enum_capture_modes(const char *device_id, EivizVideoCaptureMode *out, uint32_t cap);
int32_t mixer_video_set_playing(uint64_t id, uint32_t playing);
int32_t mixer_video_set_loop(uint64_t id, uint32_t looping);
int32_t mixer_video_seek(uint64_t id, int64_t hns);
int32_t mixer_video_copy_info(uint64_t id, EivizVideoInfo *out);
int32_t mixer_omt_connect(uint64_t id, const char *address, uint32_t use_gpu, uint32_t frame_buffer_frames, uint32_t quality);
int32_t mixer_ndi_connect(uint64_t id, const char *address, uint32_t frame_buffer_frames, uint32_t low_bandwidth);
int32_t mixer_set_live_save(uint64_t id, uint32_t mode, uint32_t flags);
int32_t mixer_omt_set_quality(uint64_t id, uint32_t quality);
int32_t mixer_omt_start_send(uint64_t unit_id, const char *name);
int32_t mixer_output_add(uint64_t output_id, uint32_t transport, const char *name, uint32_t source_kind, uint64_t source_id, uint64_t unit_id, uint32_t use_gpu, uint64_t audio_bus_id, uint32_t skip_idle_encode, uint32_t width, uint32_t height, uint32_t fps_num, uint32_t fps_den);
int32_t mixer_snapshot(uint64_t unit_id, uint32_t kind, const char *path);
int32_t mixer_output_remove(uint64_t output_id);
int32_t mixer_omt_discover(uint8_t *out, size_t cap);
int32_t mixer_ndi_discover(uint8_t *out, size_t cap);
int32_t mixer_bind_multiview(uint64_t scene_id, uint64_t preview_unit, uint64_t program_unit);
int32_t mixer_copy_follow_audio(float *out, uint32_t cap);
int32_t mixer_copy_audio_peaks(EivizAudioPeak *out, uint32_t cap);
int32_t mixer_copy_source_usage(EivizSourceUsage *out, uint32_t cap);
int32_t mixer_copy_stats(EivizMixerStats *out);
int32_t mixer_copy_runtime_stats(EivizMixerRuntimeStats *out);
int32_t mixer_copy_input_stats(EivizInputRuntimeStats *out, uint32_t cap);
int32_t mixer_copy_output_stats(EivizOutputRuntimeStats *out, uint32_t cap);
int32_t mixer_copy_rebar_info(EivizMixerRebarInfo *out);
int32_t mixer_set_rebar_optimization(uint32_t enabled);
int32_t mixer_set_ndi_gpu_upload(uint32_t enabled);
int32_t mixer_set_bus_colors(uint8_t prv_r, uint8_t prv_g, uint8_t prv_b, uint8_t pgm_r, uint8_t pgm_g, uint8_t pgm_b, uint8_t in_r, uint8_t in_g, uint8_t in_b);
int32_t mixer_set_mv_label(uint64_t scene_id, float size, uint32_t percent, uint32_t top);
int32_t mixer_set_frame_buffer(uint32_t frames);
int32_t mixer_set_monitor_present_interval(uint64_t monitor_id, uint32_t frames);
int32_t mixer_thumb_set(uint64_t source_id, uint32_t width, uint32_t height, uint32_t interval);
int32_t mixer_thumb_read(uint64_t source_id, uint8_t *buf, size_t cap, uint32_t *out_w, uint32_t *out_h, uint32_t *out_stride);
int32_t mixer_last_error(uint8_t *out, size_t cap);
int32_t mixer_take_fatal(uint8_t *out, size_t cap);
int32_t mixer_session_load(const char *path, uint8_t *out, size_t cap);
int32_t mixer_session_has_assets(const char *path);
int32_t mixer_session_import(const char *export_path, const char *session_dest, const char *media_dir, uint8_t *out, size_t cap);
int32_t mixer_session_current_path(uint8_t *out, size_t cap);
int32_t mixer_session_save(const char *path, const uint8_t *json, size_t len);
int32_t mixer_session_export(const char *path, const uint8_t *json, size_t len);
int32_t mixer_session_canonicalize(const uint8_t *json, size_t len, uint8_t *out, size_t cap);
int32_t mixer_session_clear_current(void);
int32_t mixer_session_history(const char *path, uint8_t *out, size_t cap);
int32_t mixer_session_load_rev(const char *path, uint32_t index, uint8_t *out, size_t cap);
int32_t mixer_session_publish(const uint8_t *json, size_t len);
int32_t mixer_session_replace(const uint8_t *json, size_t len, uint64_t expected_revision);
int32_t mixer_poll_events(uint64_t after, uint8_t *out, size_t cap);
int32_t mixer_api_configure(uint32_t enabled, uint32_t port, const char *user, const char *pass);
int32_t mixer_api_listen_owner(uint8_t *out, size_t cap);
int32_t mixer_tcp_configure(uint32_t enabled);
int32_t mixer_tcp_listen_owner(uint8_t *out, size_t cap);
int32_t mixer_ws_configure(uint32_t enabled, uint32_t port);
int32_t mixer_ws_configure_bind(uint32_t enabled, const char *host, uint32_t port);
int32_t mixer_ws_configure_owned(uint32_t enabled, const char *host, uint32_t port, const char *token, const char *max_role, const char *media_directory);
int32_t mixer_ws_listen_owner(uint8_t *out, size_t cap);
int32_t mixer_audio_capture_stop(uint64_t id);