hosts/win32/Interop/MixerNative.cs


    [LibraryImport(LibraryName, EntryPoint = "mixer_audio_capture_stop")]
    internal static partial int AudioCaptureStop(ulong id);

    [LibraryImport(LibraryName, EntryPoint = "mixer_bind_multiview")]
    internal static partial int BindMultiview(ulong sceneId, ulong previewUnit, ulong programUnit);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_follow_audio")]
    internal static unsafe partial int CopyFollowAudio(float* samples, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_monitor_audio")]
    internal static unsafe partial int CopyMonitorAudio(ulong id, float* samples, uint capacity, int* sampleRate, int* channels);

    [LibraryImport(LibraryName, EntryPoint = "mixer_push_frame")]
    internal static unsafe partial int PushFrame(ulong id, byte* ptr, uint stride, uint height, long pts);

    [LibraryImport(LibraryName, EntryPoint = "mixer_push_audio")]
    internal static unsafe partial int PushAudio(ulong id, int sampleRate, int channels, uint frames, long pts, float* planar);

    [LibraryImport(LibraryName, EntryPoint = "mixer_load_still", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int LoadStill(ulong id, string path);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_start", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int VideoStart(ulong id, string path, uint capture, uint format, uint width, uint height, uint fpsNum, uint fpsDen, uint frameBufferFrames);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_enum_captures")]
    internal static unsafe partial int VideoEnumCaptures(MixerVideoCaptureInfo* devices, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_enum_capture_modes", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int VideoEnumCaptureModes(string deviceId, MixerVideoCaptureMode* modes, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_set_playing")]
    internal static partial int VideoSetPlaying(ulong id, uint playing);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_set_loop")]
    internal static partial int VideoSetLoop(ulong id, uint looping);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_seek")]
    internal static partial int VideoSeek(ulong id, long hns);

    [LibraryImport(LibraryName, EntryPoint = "mixer_video_copy_info")]
    internal static unsafe partial int CopyVideoInfo(ulong id, MixerVideoInfo* info);

    [LibraryImport(LibraryName, EntryPoint = "mixer_omt_connect", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int ConnectOmt(ulong id, string address, uint useGpu, uint frameBufferFrames, uint quality);

    [LibraryImport(LibraryName, EntryPoint = "mixer_omt_set_quality")]
    internal static partial int SetOmtQuality(ulong id, uint quality);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ndi_connect", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int ConnectNdi(ulong id, string address, uint frameBufferFrames, uint lowBandwidth);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_live_save")]
    internal static partial int SetLiveSave(ulong id, uint mode, uint flags);

    [LibraryImport(LibraryName, EntryPoint = "mixer_define_scene")]
    internal static unsafe partial int DefineScene(ulong sceneId, uint width, uint height, uint count, OverlayDesc* layers);

    [LibraryImport(LibraryName, EntryPoint = "mixer_destroy_scene")]
    internal static partial int DestroyScene(ulong sceneId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_define_generator")]
    internal static partial int DefineGenerator(ulong id, uint kind, float r, float g, float b, float a, uint scroll);

    [LibraryImport(LibraryName, EntryPoint = "mixer_define_mix_input")]
    internal static partial int DefineMixInput(ulong id, ulong targetId, uint sourceKind, uint delay, ulong audioBusId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_generator_set_tone")]
    internal static partial int GeneratorSetTone(ulong id, float hz, float levelDbfs);

    [LibraryImport(LibraryName, EntryPoint = "mixer_output_add", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int OutputAdd(ulong outputId, uint transport, string name, uint sourceKind, ulong sourceId, ulong unitId, uint useGpu, ulong audioBusId, uint skipIdleEncode, uint width, uint height, uint fpsNum, uint fpsDen);

    [LibraryImport(LibraryName, EntryPoint = "mixer_snapshot", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int Snapshot(ulong unitId, uint kind, string path);

    [LibraryImport(LibraryName, EntryPoint = "mixer_output_remove")]
    internal static partial int OutputRemove(ulong outputId);

    [LibraryImport(LibraryName, EntryPoint = "mixer_omt_start_send", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int StartSend(ulong unitId, string name);

    [LibraryImport(LibraryName, EntryPoint = "mixer_omt_discover")]
    internal static unsafe partial int Discover(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ndi_discover")]
    internal static unsafe partial int DiscoverNdi(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_audio_peaks")]
    internal static unsafe partial int CopyAudioPeaks(AudioPeak* peaks, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_stats")]
    internal static unsafe partial int CopyStats(MixerStats* stats);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_runtime_stats")]
    internal static unsafe partial int CopyRuntimeStats(MixerRuntimeStats* stats);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_input_stats")]
    internal static unsafe partial int CopyInputStats(InputRuntimeStats* stats, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_output_stats")]
    internal static unsafe partial int CopyOutputStats(OutputRuntimeStats* stats, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_source_usage")]
    internal static unsafe partial int CopySourceUsage(SourceUsage* usage, uint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_copy_rebar_info")]
    internal static unsafe partial int CopyRebarInfo(MixerRebarInfo* info);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_rebar_optimization")]
    internal static partial int SetRebarOptimization(uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_ndi_gpu_upload")]
    internal static partial int SetNdiGpuUpload(uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_bus_colors")]
    internal static partial int SetBusColors(
        byte prvR, byte prvG, byte prvB,
        byte pgmR, byte pgmG, byte pgmB,
        byte inR, byte inG, byte inB);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_mv_label")]
    internal static partial int SetMvLabel(ulong sceneId, float size, uint percent, uint top);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_frame_buffer")]
    internal static partial int SetFrameBuffer(uint frames);

    [LibraryImport(LibraryName, EntryPoint = "mixer_set_monitor_present_interval")]
    internal static partial int SetMonitorPresentInterval(ulong monitorId, uint frames);

    [LibraryImport(LibraryName, EntryPoint = "mixer_thumb_set")]
    internal static partial int ThumbSet(ulong sourceId, uint width, uint height, uint interval);

    [LibraryImport(LibraryName, EntryPoint = "mixer_thumb_read")]
    internal static unsafe partial int ThumbRead(ulong sourceId, byte* buf, nuint cap, uint* outW, uint* outH, uint* outStride);

    [LibraryImport(LibraryName, EntryPoint = "mixer_last_error")]
    internal static unsafe partial int LastError(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_take_fatal")]
    internal static unsafe partial int TakeFatal(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_load", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionLoad(string path, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_has_assets", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int SessionHasAssets(string path);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_import", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionImport(string exportPath, string sessionDest, string mediaDir, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_current_path")]
    internal static unsafe partial int SessionCurrentPath(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_load_rev", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionLoadRev(string path, uint index, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_history", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionHistory(string path, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_clear_current")]
    internal static partial int SessionClearCurrent();

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_save", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionSave(string path, byte* json, nuint length);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_export", StringMarshalling = StringMarshalling.Utf8)]
    internal static unsafe partial int SessionExport(string path, byte* json, nuint length);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_canonicalize")]
    internal static unsafe partial int SessionCanonicalize(byte* json, nuint length, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_publish")]
    internal static unsafe partial int SessionPublish(byte* json, nuint length);

    [LibraryImport(LibraryName, EntryPoint = "mixer_session_replace")]
    internal static unsafe partial int SessionReplace(byte* json, nuint length, ulong expectedRevision);

    [LibraryImport(LibraryName, EntryPoint = "mixer_poll_events")]
    internal static unsafe partial int PollEvents(ulong after, byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_api_configure", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int ApiConfigure(uint enabled, uint port, string user, string pass);

    [LibraryImport(LibraryName, EntryPoint = "mixer_api_listen_owner")]
    internal static unsafe partial int ApiListenOwner(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_tcp_configure")]
    internal static partial int TcpConfigure(uint enabled);

    [LibraryImport(LibraryName, EntryPoint = "mixer_tcp_listen_owner")]
    internal static unsafe partial int TcpListenOwner(byte* buffer, nuint capacity);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ws_configure")]
    internal static partial int WsConfigure(uint enabled, uint port);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ws_configure_bind", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int WsConfigureBind(uint enabled, string host, uint port);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ws_configure_owned", StringMarshalling = StringMarshalling.Utf8)]
    internal static partial int WsConfigureOwned(uint enabled, string host, uint port, string token, string maxRole, string mediaDirectory);

    [LibraryImport(LibraryName, EntryPoint = "mixer_ws_listen_owner")]
    internal static unsafe partial int WsListenOwner(byte* buffer, nuint capacity);
